# sivan-ai

./: .dockerignore  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  server.py
.github/workflows/: ci.yml
agents/: architect.md  be-dev.md  data-engineer.md  devops.md  edge-ai-engineer.md  fe-dev.md  inference-engineer.md  mlops.md  mobile-dev.md  model-tuner.md  orchestrator.md  po.md  qa.md  rag-engineer.md  security-auditor.md  speech-engineer.md  ui-ux.md  vision-engineer.md
alembic/: env.py  script.py.mako
alembic/versions/: 90943beca35f_initial.py
application/: __init__.py
application/dto/: memory_dto.py
application/services/: agent_resolver.py  agent_service.py  contract_service.py  kb_service.py  memory_service.py  project_service.py  routing_service.py  skill_service.py  squad_matcher.py
config/: settings.py
docs/: soft-bubbling-teapot.md  whimsical-imagining-hamster.md
domain/: __init__.py
domain/agent/: entity.py  repository.py  value_object.py
domain/common/: exceptions.py  interfaces.py  (+1 more)
infrastructure/: __init__.py
interfaces/: __init__.py
sql/: agents.sql  alembic_version.sql  llm_providers.sql  memory_entries.sql  projects.sql  settings.sql  sqlite_master.sql  sqlite_sequence.sql  strategy_performance.sql  token_budget.sql
templates/: agents.html  base.html  chat.html  contracts.html  dashboard.html  knowledge_bases.html  login.html  logs.html  memory.html  reports.html  routing.html  settings.html  skills.html  squads.html  tokens.html
tests/: conftest.py
(+163 files in other folders)
