[project]
name = "sivan"
version = "0.1.0"
description = "AI 智能体团队管理系统"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.30.0",
    "chromadb>=1.5.8",
    "fastapi==0.136.1",
    "fastmcp>=3.2.4",
    "jieba>=0.42.1",
    "jinja2>=3.1.6",
    "loguru>=0.7.2",
    "modelscope>=1.20.0",
    "numpy>=2.4.4",
    "openai>=1.0.0",
    "pandas>=3.0.2",
    "pypdf>=5.0.0",
    "psutil>=7.2.2",
    "sentence-transformers>=3.0.0",
    "pydantic>=2.13.3",
    "ruff==0.15.12",
    "scikit-learn>=1.8.0",
    "sqlalchemy>=2.0.36",
    "uvicorn>=0.28.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.11.0",
]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S"]
ignore = ["S301", "S403"]  # pickle usage is known and scoped

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S"]
"scripts/**" = ["S"]
"infrastructure/ml/classifier.py" = ["S301"]  # intentional pickle usage
